--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 absl-py==2.1.0
 altair==5.3.0
+annotated-types==0.7.0
 astunparse==1.6.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+blis==0.7.11
 cachetools==5.4.0
+catalogue==2.0.10
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.18.1
+confection==0.1.5
 contourpy==1.2.1
 cycler==0.12.1
+cymem==2.0.8
 flatbuffers==24.3.25
 fonttools==4.53.1
 frozendict==2.4.4
@@ -26,9 +32,13 @@ joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 keras==3.4.1
+keras-models==0.0.7
 kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
 libclang==18.1.1
 lxml==5.3.0
+marisa-trie==1.2.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -36,17 +46,23 @@ matplotlib==3.9.1.post1
 mdurl==0.1.2
 ml-dtypes==0.4.0
 multitasking==0.0.11
+murmurhash==1.0.10
 namex==0.0.8
 numpy==1.26.4
+opencv-python==4.10.0.84
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
 pandas==2.2.2
+pathlib==1.0.1
 peewee==3.17.6
 pillow==10.4.0
 platformdirs==4.2.2
+preshed==3.0.9
 protobuf==4.25.4
 pyarrow==17.0.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.1.2
@@ -58,9 +74,15 @@ rich==13.7.1
 rpds-py==0.20.0
 scikit-learn==1.5.1
 scipy==1.14.0
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.4
 smmap==5.0.1
 soupsieve==2.5
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 streamlit==1.37.1
 tenacity==8.5.0
 tensorboard==2.17.0
@@ -68,14 +90,19 @@ tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
+thinc==8.2.5
 threadpoolctl==3.5.0
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4.1
+tqdm==4.66.5
+typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+wasabi==1.1.3
 watchdog==4.0.1
+weasel==0.4.1
 webencodings==0.5.1
 Werkzeug==3.0.3
 wrapt==1.16.0
